--- a/public/css/giaodiencss.css
+++ b/public/css/giaodiencss.css
@@ -12068,4 +12068,8 @@
               color: #ffc875;
             }
           }
+          .bRlYaZZ{
+
+            padding: 17px;
+          }
           
